Alignment fixes
footer and mainpage content alignment fix. yaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaay

--- a/design.css
+++ b/design.css
@@ -16,9 +16,9 @@ body {
     overflow-x: hidden;
 }
 
-.container {
+.containermain {
 	width: 100%;
-	position: absolute;
+	position: sticky;
 	top: 40%;
 	text-align: center;
 }
@@ -28,9 +28,14 @@ body {
     bottom: 0;
     width: 100%;
     height: 60px;
-    line-height: 20px;
+    line-height: 60px;
     color: black;
     background-color: #f5f5f5;
+}
+
+.footercontainer {
+	padding-left: 50px;
+	text-align: left;
 }
 
 .textoverflow {
